<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

     <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dip" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:padding="10dip" >

            <TextView
                android:id="@+id/TotalTestText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dip"
                android:text="@string/repeat_OTA_total_test_text"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/TotalTestCount"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_alignRight="@+id/TotalTestText"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:ems="10"
                android:inputType="textNoSuggestions"
                android:maxLength="32"
                android:singleLine="true"
                android:textSize="25sp"
                android:text="@string/repeat_OTA_total_test_count" >
                <requestFocus />
            </EditText>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:padding="10dip" >

            <TextView
                android:id="@+id/IdleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dip"
                android:text="@string/repeat_OTA_idle_text"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/IdleTime"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_alignRight="@+id/IdleText"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:ems="10"
                android:inputType="textNoSuggestions"
                android:maxLength="32"
                android:singleLine="true"
                android:textSize="25sp"
                android:text="@string/repeat_OTA_Idle_time" />
        </RelativeLayout>
        <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" >
	        <Button
	            android:id="@+id/ota_start_button"
		        android:layout_width="0dip"
	            android:layout_height="fill_parent"
	            android:layout_weight="1"
	            android:text="@string/repeat_OTA_start_button" />
	        <Button
	            android:id="@+id/ota_stop_button"
	            android:layout_width="0dip"
	            android:layout_height="fill_parent"
	            android:layout_weight="1"
	            android:text="@string/repeat_OTA_stop_button" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/RemainText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginTop="24dp"
        android:textSize="30sp"
        android:text="@string/repeat_OTA_remain_text" />
    <TextView
        android:id="@+id/RemainCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/RemainText"
        android:layout_alignBottom="@+id/RemainText"
        android:layout_marginLeft="16dp"
        android:layout_toRightOf="@+id/RemainText"
        android:textSize="30sp"
        android:textColor="#FF0000"
        android:text="@string/viewshow" />

    <TextView
        android:id="@+id/CountDownText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/RemainText"
        android:textSize="30sp"
        android:text="@string/repeat_OTA_countdown_text" />
    <TextView
        android:id="@+id/CountDownTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/CountDownText"
        android:layout_alignBottom="@+id/CountDownText"
        android:layout_toRightOf="@+id/CountDownText"
        android:textSize="30sp"
        android:textColor="#FF0000"
        android:text="@string/viewshow" />
    
	<TextView
        android:id="@+id/OTAInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/CountDownText"
        android:textSize="30sp"
        android:text="@string/repeat_OTA_status" />
    <TextView
        android:id="@+id/OTAProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/OTAInfo"
        android:layout_alignBottom="@+id/OTAInfo"
        android:layout_toRightOf="@+id/OTAInfo"
        android:textSize="30sp"
        android:textColor="#FF0000"
        android:text="@string/viewshow" />
    
</RelativeLayout>