<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white" 
    android:orientation="vertical">

	    <RelativeLayout
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:layout_marginTop="10sp"
	    	android:padding="10dip" >
	    	
			<TextView
	            android:id="@+id/set_battery_value"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textSize="25sp"
	            android:layout_marginTop="20sp"
	            android:text="@string/battery_controller_setting_text"
	            android:layout_marginRight="30sp"/>
			
	        <EditText
                android:id="@+id/lower_bound_edit"
                android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_centerVertical="true"
                android:inputType="number"
                android:maxLength="32"
                android:singleLine="true"
                android:text="@string/battery_controller_lower_bound_default"
				android:layout_toRightOf="@id/set_battery_value"
	            android:layout_alignBottom="@id/set_battery_value"
                android:textSize="25sp" />
	        <TextView
	            android:id="@+id/lower_percentage"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textSize="25sp"
	            android:text="@string/battery_controller_percentage"
	            android:layout_toRightOf="@id/lower_bound_edit"
	            android:layout_alignBottom="@id/set_battery_value"
	            android:layout_marginRight="30sp"/>
	        	
	        <TextView
	            android:id="@+id/between_text"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textSize="25sp"
	            android:text="@string/battery_controller_between_text"
	            android:layout_toRightOf="@id/lower_percentage"
	            android:layout_alignBottom="@id/set_battery_value"
	            android:layout_marginRight="30sp"/>
	
			<EditText
                android:id="@+id/upper_bound_edit"
                android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_centerVertical="true"
                android:inputType="number"
                android:maxLength="32"
                android:singleLine="true"
                android:text="@string/battery_controller_upper_bound_default"
                android:textSize="25sp" 
                android:paddingLeft="20dp"
                android:layout_toRightOf="@id/between_text"
                android:layout_alignBottom="@id/set_battery_value"/>
			
			<TextView
			    android:id="@+id/upper_percentage"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_alignBottom="@id/set_battery_value"
			    android:layout_toRightOf="@id/upper_bound_edit"
			    android:text="@string/battery_controller_percentage"
			    android:textSize="25sp" />
	    </RelativeLayout>

	    <Button
	        android:id="@+id/battery_controll_start_btn"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/battery_controller_start" />

	    <ListView
	        android:id="@+id/battery_controll_log_list"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="15dip" />
</LinearLayout>